--- a/build.gradle
+++ b/build.gradle
@@ -24,6 +24,9 @@ repositories {
 }
 
 dependencies {
+	//JWT
+	implementation 'org.springframework.boot:spring-boot-starter-oauth2-resource-server'
+
 	//spring security
 	implementation 'org.springframework.boot:spring-boot-starter-security:3.4.4'
 
@@ -39,6 +42,10 @@ dependencies {
 
 	//postgres sql
 	runtimeOnly 'org.postgresql:postgresql'
+
+	//swagger UI
+	// https://mvnrepository.com/artifact/org.springdoc/springdoc-openapi-starter-webmvc-ui
+	//	implementation 'org.springdoc:springdoc-openapi-starter-webmvc-ui:2.8.8'
 
 	//project need
 	implementation 'org.springframework.boot:spring-boot-starter-web'
