--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -8,3 +8,11 @@ spring.datasource.url=jdbc:postgresql://${PG_HOST}:${PG_PORT}/${PG_DB}
 spring.datasource.username=${PG_USERNAME}
 spring.datasource.password=${PG_PASSWORD}
 spring.datasource.driver-class-name=org.postgresql.Driver
+
+
+
+#JWT
+access-token.private=access-refresh-token-keys/accessTokenPrivate.key
+access-token.public=access-refresh-token-keys/accessTokenPublic.key
+refresh-token.private=access-refresh-token-keys/refreshTokenPrivate.key
+refresh-token.public=access-refresh-token-keys/refreshTokenPublic.key
